plugins/java-i18n/testData/highlighting/Duplicate.properties
<error descr="Duplicate property key">xxx</error>=aaa
<error descr="Duplicate property key">xxx</error>=bbb
